# hello-bazel

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
toolchain/: BUILD  cc_toolchain_config.bzl
tools/: yocto_ext.bzl
